---
source: tests/std140.rs
expression: "<<ProperlyChecksForUnderlyingTypeSize as AsStd140>::Std140Type as\n    TypeLayout>::type_layout()"

---
name: Std140ProperlyChecksForUnderlyingTypeSize
size: 36
alignment: 4
fields:
  - Field:
      name: _leading_align
      ty: "[u8 ; Std140ProperlyChecksForUnderlyingTypeSizeAlignment :: _leading_align()]"
      size: 0
  - Field:
      name: leading
      ty: "< BaseSizeAndStdSizeAreDifferent as :: crevice :: std140 :: AsStd140 > ::\nStd140Type"
      size: 20
  - Field:
      name: _trailing_align
      ty: "[u8 ; Std140ProperlyChecksForUnderlyingTypeSizeAlignment :: _trailing_align()]"
      size: 12
  - Field:
      name: trailing
      ty: "< PaddedByStdButNotRust as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 4

